// Vitest Snapshot v1

exports[`Swiper > Swiper swiperVue demo works fine 1`] = `
<div
  class="tdesign-demo-block--swiper-new"
>
  <div
    class="t-swiper"
  >
    <div
      class="t-swiper__wrap t-swiper--inside"
    >
      <div
        class="t-swiper__content"
      >
        <div
          class="t-swiper__container"
          style="transform: translate3d(-0%, 0px, 0px);"
        >
          
          
        </div>
      </div>
      <ul
        class="t-swiper__navigation t-swiper__navigation-bars"
      >
        
        
      </ul>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Swiper Swiper cardVue demo works fine 1`] = `
<div
  class="tdesign-demo-block--swiper-new"
>
  <div
    class="t-swiper"
  >
    <div
      class="t-swiper__wrap t-swiper--inside"
    >
      <div
        class="t-swiper__content t-swiper-card"
      >
        <div
          class="t-swiper__container"
          style="height: 280px;"
        >
          
          
        </div>
      </div>
      <ul
        class="t-swiper__navigation t-swiper__navigation-bars"
      >
        
        
      </ul>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Swiper Swiper currentVue demo works fine 1`] = `
<div
  class="tdesign-demo-block--swiper-new"
>
  <div
    class="t-swiper"
  >
    <div
      class="t-swiper__wrap t-swiper--inside"
    >
      <div
        class="t-swiper__content"
      >
        <div
          class="t-swiper__container"
          style="transform: translate3d(-0%, 0px, 0px);"
        >
          
          
        </div>
      </div>
      <ul
        class="t-swiper__navigation t-swiper__navigation-bars"
      >
        
        
      </ul>
      <!---->
    </div>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <button
      class="t-button t-size-s t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         跳转到第 2 项 
        
      </span>
    </button>
  </div>
</div>
`;

exports[`Swiper Swiper fadeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block--swiper-new"
>
  <div
    class="t-swiper"
  >
    <div
      class="t-swiper__wrap t-swiper--inside"
    >
      <div
        class="t-swiper__content t-swiper-fade"
      >
        <div
          class="t-swiper__container"
          style="height: 280px;"
        >
          
          
        </div>
      </div>
      <ul
        class="t-swiper__navigation t-swiper__navigation-bars"
      >
        
        
      </ul>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Swiper > Swiper verticalVue demo works fine 1`] = `
<div
  class="tdesign-demo-block--swiper-new"
>
  <div
    class="t-swiper"
  >
    <div
      class="t-swiper__wrap t-swiper--inside"
    >
      <div
        class="t-swiper__content"
      >
        <div
          class="t-swiper__container"
          style="transform: translate3d(-0%, 0px, 0px);"
        >
          
          
        </div>
      </div>
      <div
        class="t-swiper__navigation t-swiper__navigation--fraction"
      >
        <div
          class="t-swiper__arrow"
        >
          <div
            class="t-swiper__arrow-left"
          >
            <svg
              class="t-icon t-icon-chevron-left"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-swiper__navigation-text-fraction"
          >
            1
            /
            0
          </div>
          <div
            class="t-swiper__arrow-right"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Swiper Swiper placementVue demo works fine 1`] = `
<div
  class="tdesign-demo-block--swiper-new"
>
  <div
    class="t-swiper"
  >
    <div
      class="t-swiper__wrap t-swiper--outside"
    >
      <div
        class="t-swiper__content"
      >
        <div
          class="t-swiper__container"
          style="transform: translate3d(-0%, 0px, 0px);"
        >
          
          
        </div>
      </div>
      <ul
        class="t-swiper__navigation t-swiper__navigation-bars"
      >
        
        
      </ul>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Swiper Swiper sizeVue demo works fine 1`] = `
<div>
  <div
    class="tdesign-demo-block--swiper-new"
    style="width: 1000px;"
  >
    <h3>
      large
    </h3>
    <div
      class="t-swiper"
    >
      <div
        class="t-swiper__wrap t-swiper--inside t-swiper--large"
      >
        <div
          class="t-swiper__content"
        >
          <div
            class="t-swiper__container"
            style="transform: translate3d(-0%, 0px, 0px);"
          >
            
            
          </div>
        </div>
        <ul
          class="t-swiper__navigation t-swiper__navigation-bars"
        >
          
          
        </ul>
        <!---->
      </div>
    </div>
  </div>
  <div
    class="tdesign-demo-block--swiper-new"
    style="width: 500px; margin-top: 20px;"
  >
    <h3>
      small
    </h3>
    <div
      class="t-swiper"
    >
      <div
        class="t-swiper__wrap t-swiper--inside t-swiper--small"
      >
        <div
          class="t-swiper__content"
        >
          <div
            class="t-swiper__container"
            style="transform: translate3d(-0%, 0px, 0px);"
          >
            
            
          </div>
        </div>
        <ul
          class="t-swiper__navigation t-swiper__navigation-bars"
        >
          
          
        </ul>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Swiper Swiper verticalVue demo works fine 1`] = `
<div
  class="tdesign-demo-block--swiper-new"
>
  <div
    class="t-swiper"
  >
    <div
      class="t-swiper__wrap t-swiper--inside t-swiper--vertical"
    >
      <div
        class="t-swiper__content"
      >
        <div
          class="t-swiper__container"
          style="height: 280px; transform: translate3d(0, -0%, 0px);"
        >
          
          
        </div>
      </div>
      <ul
        class="t-swiper__navigation t-swiper__navigation-bars"
      >
        
        
      </ul>
      <!---->
    </div>
  </div>
</div>
`;
